--- a/การเมือง1.html
+++ b/การเมือง1.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>ข่าวต่างประเทศ - ประชาสัมพันธ์ข่าวประจำชั่วโมง</title>
+  <title>การเมือง - ประชาสัมพันธ์ข่าวประจำชั่วโมง</title>
   <style>
     body {
       font-family: Tahoma, "Segoe UI", Arial, sans-serif; /* ฟอนต์เรียบง่ายแบบเว็บข่าว */
@@ -76,17 +76,25 @@
   <a href="1.html">หน้าแรก</a>
   <a href="การเมือง.html">ข่าวการเมือง</a>
   <a href="ต่างประเทศ.html">ข่าวประเทศ</a>
-  <a href="เศรษฐกิจ.html">เศรษฐกิจ</a>
+  <a href="เศรษฐกิจ.html">ข่าวเศรษฐกิจ</a>
 </nav>
 
 <div class="headline">
-  <img src="https://static.thairath.co.th/media/dFQROr7oWzulq5Fa6rfcDBgoYQFBuDKhxwhb1osnWJ16mHPx1NCyoQ339ghHune2FzX.webp" alt="พาดหัวข่าวการเมือง">
+  <img src="https://static.thairath.co.th/media/dFQROr7oWzulq5Fa6rfYk8I4a32rnPEs4gB8dmGwlw5PbmfNHqknzPOGd0NUZVncfYg.webp" alt="พาดหัวข่าวการเมือง">
   <div class="headline-content">
-    <h1>กต. ประท้วงเหตุครั้งที่ 4 ประณามกัมพูชาใช้ทุ่นระเบิดสังหารมนุษย์ซ้ำแล้วซ้ำเล่า</h1>
-    <p>สรุปสถานการณ์ชายแดนไทย-กัมพูชา 7 จังหวัด ตั้งแต่เย็น 18 ส.ค. ถึงเช้า 19 ส.ค. 68 เหตุการณ์ปกติ รัฐบาลย้ำไทยยังคงยึดมั่นรักษาข้อตกลงหยุดยิง และไม่รื้อถอนรั้วลวดหนามเด็ดขาด
-วันที่ 19 สิงหาคม 2568 เมื่อเวลา 07.00 น. นายจิรายุ ห่วงทรัพย์ โฆษกประจำสำนักนายกรัฐมนตรีและคณะกรรมการศูนย์เฉพาะกิจบริหารสถานการณ์ชายแดนไทย-กัมพูชา (ศบ.ทก.) เปิดเผยว่า สถานการณ์ชายแดนไทย-กัมพูชาทั้ง 7 จังหวัดเหตุการณ์ปกติ ขณะที่กองทัพไทยก็ยังคงวางกำลังตามแนวที่มั่นทั้ง 11 พื้นที่ และวางรั้วลวดหนามเพื่อรักษาอธิปไตยไทยไม่ให้ใครล่วงล้ำเข้ามา
-“ประเทศไทยยังคงยึดมั่นในการรักษาข้อตกลงหยุดยิง หลังเที่ยงคืน 28 กรกฎาคม คือ อยู่ตรงไหนให้อยู่ตรงนั้น และเดินหน้าแก้ไขปัญหาชายแดนด้วยสันติวิธี ขณะเดียวกัน รัฐบาลไทยปกป้องอธิปไตยของไทยและจะไม่ยอมให้มีการละเมิดบูรณภาพแห่งดินแดน”
-นายจิรายุ ย้ำว่า สำหรับการล้อมรั้วลวดหนามจะไม่มีการรื้อถอนอย่างเด็ดขาด และยืนยันจะดำเนินการอย่างต่อเนื่องเพื่อรักษาอธิปไตยในเขตแดนของประเทศไทย และดูแลความปลอดภัยของคนไทยในพื้นที่.</p>
+    <h1>รัฐบาลเคาะเก็บค่าไฟฟ้าบ้านไม่เกิน 3.94 บาท/หน่วย ในงวดกันยายน-ธันวาคม 68</h1>
+    <p>รองโฆษกรัฐบาลเผย กพช. ไฟเขียวแพ็กเกจพลังงานใหญ่ ลดต้นทุนผลิต–อนุมัติจ่ายค่าไฟบ้าน 3.94 บาท/หน่วย ในงวดกันยายนถึงธันวาคม 2568 เพื่อลดภาระค่าใช้จ่ายครัวเรือน
+    </p>
+    <p>นางสาวศศิกานต์ วัฒนะจันทร์ รองโฆษกประจำสำนักนายกรัฐมนตรี เปิดเผยในรายการ “เสียงจากใจ ไทยคู่ฟ้า” ออกอากาศวันเสาร์ที่ 23 สิงหาคม 68 ว่า ที่ประชุมคณะกรรมการนโยบายพลังงานแห่งชาติ (กพช.) ซึ่งมีนายภูมิธรรม เวชยชัย รักษาการนายกรัฐมนตรีเป็นประธาน และมีนายพีระพันธุ์ สาลีรัฐวิภาค รองนายกรัฐมนตรีและรัฐมนตรีว่าการกระทรวงพลังงานเข้าร่วมประชุม ได้เห็นชอบมาตรการพลังงานสำคัญที่ส่งผลโดยตรงต่อเสถียรภาพพลังงานและค่าครองชีพของประชาชนในหลายเรื่องสำคัญ
+    </p>
+    <p>โดยที่ประชุมได้อนุมัติการรับซื้อไฟฟ้าจากพลังงานหมุนเวียนเพิ่มเติมทั้งโครงการลมและแสงอาทิตย์ โดยให้หน่วยงานที่เกี่ยวข้องเจรจาราคากับภาคเอกชนให้แล้วเสร็จภายใน 45 วัน พร้อมขยายกำหนดวันจ่ายไฟฟ้าเชิงพาณิชย์ (SCOD) ไม่เกินปี 2573 เพื่อเร่งเพิ่มสัดส่วนพลังงานสะอาดเข้าสู่ระบบไฟฟ้าไทย
+    </p>
+    <p>กพช. ยังอนุมัติขยายอายุโรงไฟฟ้าน้ำพอง ชุดที่ 1–2 ออกไปอีก 6 ปี ตั้งแต่วันที่ 1 มกราคม 2569 ถึง 30 กันยายน 2574 ซึ่งคาดว่าจะช่วยลดต้นทุนการผลิตไฟฟ้าสุทธิได้กว่า 28,358 ล้านบาท พร้อมเห็นชอบแนวทางบริหารจัดการโรงไฟฟ้าแม่เมาะ โดยเลื่อนการปลดโรงไฟฟ้าเครื่องที่ 8 และ 11 ออกไปถึงสิ้นปี 2574 ควบคู่กับการปรับปรุงเครื่องที่ 12–13 เพื่อใช้งานต่อถึงปี 2591 แนวทางนี้จะช่วยลดการลงทุนใหม่ ลดการนำเข้า Spot LNG และลดค่า Ft ลงเฉลี่ย 3.67 สตางค์ต่อหน่วย หรือประมาณ 9,566 ล้านบาทต่อปี
+    </p>
+    <p>ขณะเดียวกัน ที่ประชุมยังมีมติอนุมัติให้ประชาชนผู้ใช้ไฟฟ้าประเภทบ้านอยู่อาศัยแบบอัตราปกติ จ่ายค่าไฟฟ้าไม่เกิน 3.94 บาทต่อหน่วยในงวดกันยายนถึงธันวาคม 2568 เพื่อลดภาระค่าใช้จ่ายครัวเรือน โดยมอบหมายให้สำนักงานนโยบายและแผนพลังงาน (สนพ.) และคณะกรรมการกำกับกิจการพลังงาน (กกพ.) ทบทวนเกณฑ์เพดานการใช้ไฟฟ้า เพื่อให้ส่วนลดครอบคลุมผู้ใช้ส่วนใหญ่และเป็นธรรม
+    </p>
+    <p>นอกจากนี้ กพช. ยังมีมติยืนยันราคาขายไฟฟ้าแก่ประเทศเพื่อนบ้านต้องไม่ต่ำกว่าราคาที่จำหน่ายภายในประเทศ เพื่อไม่ให้กระทบต้นทุนไฟฟ้าของประชาชนไทย พร้อมทั้งยกเลิกแผนการแยกศูนย์ควบคุมระบบไฟฟ้า (SO) ออกจาก กฟผ. โดยคงโครงสร้างแบบ Enhance Single Buyer (ESB) ที่มีประสิทธิภาพและสอดคล้องมาตรฐานสากล รวมถึงเห็นชอบให้เดินหน้าโครงการ Demand Response (DR) ต่อเนื่อง เพื่อควบคุมต้นทุนค่าไฟและลดการนำเข้า LNG โดยจะบรรจุค่าใช้จ่ายผลตอบแทน DR ไว้ในแผนพัฒนากำลังผลิตไฟฟ้า (PDP) ฉบับใหม่ต่อไป
+    </p>
   </div>
 </div>
 
