--- a/การเมือง2.html
+++ b/การเมือง2.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>ข่าวต่างประเทศ - ประชาสัมพันธ์ข่าวประจำชั่วโมง</title>
+  <title>การเมือง - ประชาสัมพันธ์ข่าวประจำชั่วโมง</title>
   <style>
     body {
       font-family: Tahoma, "Segoe UI", Arial, sans-serif; /* ฟอนต์เรียบง่ายแบบเว็บข่าว */
@@ -76,19 +76,19 @@
   <a href="1.html">หน้าแรก</a>
   <a href="การเมือง.html">ข่าวการเมือง</a>
   <a href="ต่างประเทศ.html">ข่าวประเทศ</a>
-  <a href="เศรษฐกิจ.html">เศรษฐกิจ</a>
+  <a href="เศรษฐกิจ.html">ข่าวเศรษฐกิจ</a>
 </nav>
 
 <div class="headline">
-  <img src="https://static.thairath.co.th/media/dFQROr7oWzulq5Fa6rfbEWgVzHTK1SY1iKK4dw8AgMXPkgESG3UWy9d8UFEdzQvR2Cz.webp" alt="พาดหัวข่าวการเมือง">
+  <img src="https://static.thairath.co.th/media/dFQROr7oWzulq5Fa6rfYlTzgS9XXeTtaPMbfaGyTy7MYuq1Xztxinb7vELuW3PgHGcB.webp" alt="พาดหัวข่าวการเมือง">
   <div class="headline-content">
-    <h1>กองทัพภาคที่ 2" พบทุ่นระเบิด PMN-2 เพิ่มอีก 3 ทุ่น อยู่ในสภาพใหม่ไม่ใช่ของเก่า</h1>
-    <p>"กองทัพภาคที่ 2" ส่งหน่วยเก็บกู้วัตถุระเบิด-พิสูจน์หลักฐาน เข้าตรวจทุ่นระเบิด PMN-2 หลัง "ส.อ.ธีรพล" เหยียบขาขาด ล่าสุดพบเพิ่มอีก 3 ทุ่น อยู่ในสภาพใหม่พร้อมใช้งาน ไม่ใช่ของเก่า
-วันที่ 12 ส.ค. 2568 เฟซบุ๊ก กองทัพภาคที่ 2 โพสต์ข้อความโดยระบุว่า "จากเหตุการณ์ที่ สิบเอก ธีรพล เพียขันที สังกัด กองร้อยทหารพรานที่ 2610 ทำการลาดตระเวนบริเวณ ฐานปฏิบัติการจุดตะโมก อยู่ทางตะวันตก ปราสาทตาเหมือนธม อ.พนมดงรัก จ.สุรินทร์ ได้ประสบเหตุเหยียบทุ่นระเบิด PMN-2 ได้รับบาดเจ็บสาหัส
-กองทัพภาคที่ 2 ได้ดำเนินการส่งหน่วยเก็บกู้วัตถุระเบิด และพิสูจน์หลักฐาน เดินทางลงพื้นที่เกิดเหตุบริเวณฐานปฏิบัติการจุดตะโมก พื้นที่ปราสาทตาเหมือนธม เข้าไปเก็บหลักฐานเพิ่มเติม เพื่อนำพิสูจน์ทราบ
-ล่าสุดผลการพิสูจน์ 100% เป็นทุ่นระเบิด PMN-2 เพิ่มเติม 3 ทุ่น ซึ่งอยู่ใน ‘สภาพใหม่’ พร้อมใช้งาน ไม่ใช่ของเก่า และอยู่ในเขตอธิปไตยของไทย".</p>
+    <h1>เป็นเรื่องของ “แพทองธาร” - สภาฯ ไม่ต้องเตรียมการรองรับ ศาลรัฐธรรมนูญลงมติคดีคลิปเสียง</h1>
+    <p>“วันนอร์” เผยไม่ใช่หน้าที่ของสภาฯ เตรียมการรองรับคำวินิจฉัยศาลรัฐธรรมนูญ 29 ส.ค. นี้ ชี้เป็นเรื่องของนายกฯ แต่มีความพร้อมทำตามกฎหมาย ไม่ขอคาดเดาคำวินิจฉัย เหตุวิพากษ์วิจารณ์ศาลรัฐธรรมนูญไม่ได้</p>
+    <p>วันที่ 23 สิงหาคม 2568 นายวันมูหะมัดนอร์ มะทา ประธานรัฐสภาและประธานสภาผู้แทนราษฎร กล่าวถึงการเตรียมพร้อมรองรับการตัดสินคดีคลิปเสียงนายกรัฐมนตรีของศาลรัฐธรรมนูญ ในวันที่ 29 สิงหาคมนี้ ว่า สภาไม่ได้เตรียมอะไรรองรับเหตุการณ์ที่จะเกิดขึ้นในวันที่ 29 สิงหาคม เพราะเป็นเรื่องของนายกรัฐมนตรีที่ถูกกล่าวหา และศาลรัฐธรรมนูญจะเป็นผู้วินิจฉัย หลังจากนั้นผลจะเป็นอย่างไร เป็นเรื่องระหว่างศาลกับนายกรัฐมนตรี สภาจึงไม่ได้มีการเตรียมการอะไร แต่หลังวันที่ 29 สิงหาคม หากมีผลอย่างไรสิ่งใดที่เป็นหน้าที่ของสภา สภาก็จะทำหน้าที่อย่างดีที่สุด พร้อมย้ำว่าวันที่ 29 ไม่ใช่หน้าที่ของสภา</p>
+    <p>ส่วนถ้าคำวินิจฉัยวันที่ 29 สิงหาคม เป็นลบ กระบวนการขั้นตอนการได้มาซึ่งนายกรัฐมนตรีและรัฐบาลต้องใช้เวลากี่วัน นายวันมูหะมัดนอร์ กล่าวว่า ต้องเป็นไปตามรัฐธรรมนูญ เพราะการโหวตเลือกนายกรัฐมนตรีเป็นเรื่องของสภาที่จะมีการประชุม จากเดิมต้องประชุมร่วมรัฐสภาแต่มาตรา 272 ของรัฐธรรมนูญจบไปแล้ว ถึงจะมีแค่การประชุมสภาผู้แทนราษฎร เหมือนกับการโหวตเลือกนายกรัฐมนตรีที่ผ่านมาครั้งล่าสุด คงใช้เวลาไม่นาน สภาพร้อมดำเนินการเพื่อให้ทุกอย่างเป็นไปตามกฎหมาย แต่เราไม่อยากจะพูดตอนนี้ว่าผลจะออกมาเป็นบวกหรือเป็นลบ คำวินิจฉัยของศาลรัฐธรรมนูญไปวิพากษ์วิจารณ์ไม่ได้ โดยเฉพาะฝ่ายนิติบัญญัติต้องเคารพฝ่ายตุลาการ</p>
   </div>
 </div>
 
 </body>
 </html>
+
