--- a/กา่รเมือง3.html
+++ b/กา่รเมือง3.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>ข่าวต่างประเทศ - ประชาสัมพันธ์ข่าวประจำชั่วโมง</title>
+  <title>การเมือง - ประชาสัมพันธ์ข่าวประจำชั่วโมง</title>
   <style>
     body {
       font-family: Tahoma, "Segoe UI", Arial, sans-serif; /* ฟอนต์เรียบง่ายแบบเว็บข่าว */
@@ -76,18 +76,19 @@
   <a href="1.html">หน้าแรก</a>
   <a href="การเมือง.html">ข่าวการเมือง</a>
   <a href="ต่างประเทศ.html">ข่าวประเทศ</a>
-  <a href="เศรษฐกิจ.html">เศรษฐกิจ</a>
+  <a href="เศรษฐกิจ.html">ข่าวเศรษฐกิจ</a>
 </nav>
 
 <div class="headline">
-  <img src="https://static.thairath.co.th/media/dFQROr7oWzulq5Fa6rfbDXeoLn2DxUlI3fbTiQ0sEy9UXPRYNj4lYSVe2LaWFFPk428.webp" alt="พาดหัวข่าวการเมือง">
+  <img src="https://static.thairath.co.th/media/dFQROr7oWzulq5Fa6rfYlUiYFsw67lRYmELAam1oK3RNaqV6eUFXR22mO2QO5U7I9iw.webp" alt="พาดหัวข่าวการเมือง">
   <div class="headline-content">
-    <h1>ผบ.ร.12 รอ. ตรวจการฝึกกำลังพลกรมทหารราบที่ 2 รักษาพระองค์ พร้อมรบรักษาอธิปไตย</h1>
-    <p>“พ.อ.ชัยณรงค์” ผบ.ร.12 รอ. ตรวจการฝึกของกำลังพล กรมทหารราบที่ 2 รักษาพระองค์ พร้อมรักษาอธิปไตย เพจกองทัพบก ชี้ แม้หวังตั้งสงบ จงเตรียมรบให้พร้อมสรรพ
-เมื่อเวลา 15.56 น. วันที่ 12 สิงหาคม 2568 ผู้สื่อข่าวรายงานว่าเฟซบุ๊กเพจ กองทัพบก Royal Thai Army โพสต์ภาพการฝึกของกำลังพลทหารไทย พร้อมข้อความว่า “แม้หวังตั้งสงบ จงเตรียมรบให้พร้อมสรรพ” ก่อนระบุต่อไปถึงนโยบายผู้บังคับบัญชาให้ดำเนินการฝึกและตรวจสอบเป็นหน่วยหมู่ ตอน หมวด ประจำปี 2568 ซึ่งกองพลทหารราบที่ 2 รักษาพระองค์ โดย กองพันทหารราบที่ 1 กรมทหารราบที่ 12 รักษาพระองค์ ให้การต้อนรับ พ.อ.ชัยณรงค์ กาสี ผู้บังคับการกรมทหารราบที่ 12 รักษาพระองค์ (ผบ.ร.12 รอ.) ในโอกาสเดินทางมาเป็นประธานการตรวจสภาพความพร้อมรบของ มว.ตส.ที่ 1, มว.ตส.ที่ 2 และ มว.ตส.ที่ 3 (ห้วงการฝึก 12-18 สิงหาคม 2568) ในการฝึกและตรวจสอบเป็นหน่วย หมู่ ตอน หมวด ประจำปี 2568 ณ บริเวณพื้นที่ฝึก อ.วัฒนานคร จ.สระแก้ว
-ทั้งนี้ เพื่อเป็นการตรวจความพร้อม ทั้งเป็นบุคคล และเป็นหน่วย รวมถึงยุทโธปกรณ์ ยานพาหนะ ตลอดจนการปฏิบัติทางยุทธวิธี ก่อนออกทำการตรวจสอบ เพื่อให้เกิดความพร้อมในการรักษาอธิปไตยต่อไป.</p>
+    <h1>การเคหะฯ โต้ สส.ปชน. ของบฯ เพิ่มจากปีก่อน 150 ล้าน เพราะอาคารชำรุดต้องซ่อมอย่างเร่งด่วน</h1>
+    <p>การเคหะแห่งชาติ แจง “สส.รัชนก” ของบรัฐบาลปรับปรุงซ่อมแซมอาคารเช่าเพื่อต้องการลดค่าใช้จ่ายของประชาชนผู้มีรายได้น้อย ชี้ งบฯ 69 เพิ่มขึ้นจากปี 68 จำนวน 150 ล้าน เพราะสภาพอาคารชำรุดทรุดโทรมจำเป็นต้องซ่อมแซมอย่างเร่งด่วน</p>
+    <p>วันที่ 22 ส.ค. 2568 การเคหะแห่งชาติ ชี้แจงกรณี นางสาวรัชนก สุขประเสริฐ สส.สมุทรปราการ เขต 2 พรรคประชาชน อภิปรายถึงกรณีการบริหารโครงการอาคารเช่าของการเคหะแห่งชาติ ทั้ง 52 แห่งทั่วประเทศ ในการพิจารณาร่างพระราชบัญญัติงบประมาณรายจ่ายประจำปี 2569 วาระที่ 2 มาตรา 29 เมื่อวันที่ 15 ส.ค. 2568 ว่า การเคหะแห่งชาติมีอาคารประเภทเช่าทั้งหมด 65,019 หน่วย แบ่งเป็นการบริหาร 2 รูปแบบ คือ ให้เช่าตรงกับประชาชน 33,829 หน่วย ให้เอกชนเช่าเหมาแบบเบ็ดเสร็จ 29,950 หน่วย และให้หน่วยงานรัฐเช่าเหมา 1,240 หน่วย ส่วนกรณีที่ผู้ประกอบการให้บริการในพื้นที่ จ.สมุทรปราการ ประกาศขึ้นอัตราค่าเช่าสูงกว่าเพดานที่กำหนดนั้น ทางการเคหะฯ ได้มีการจัดประชุมชี้แจงว่าโครงการดังกล่าวเป็นอาคารเช่าไม่มีการเรียกเก็บค่าส่วนกลาง ค่าไฟฟ้าเป็นอำนาจหน้าที่ของการไฟฟ้านครหลวง และค่าน้ำประปาเป็นการจัดเก็บตามประกาศของการเคหะฯ พร้อมทั้งได้ทำหนังสือแจ้งยกเลิกการเรียกเก็บค่าใช้จ่ายเพิ่มเติม เพราะเข้าใจคลาดเคลื่อน และคงเก็บเฉพาะค่าเช่ารายเดือนในอัตราเดิม อีกทั้งปัจจุบันผู้เช่ารายย่อยในพื้นที่ จ.สมุทรปราการได้ชำระค่าเช่ารายเดือนในอัตราที่ต่ำกว่าราคาตลาดและเป็นค่าเช่าที่การเคหะฯ กำหนดไว้ในสัญญาเช่าและบริหารชุมชน</p>
+    <p>ส่วนโครงการที่ให้สิทธิเอกชนเช่าเหมาและห้องพักอาศัยเสื่อมสภาพต้องดำเนินการปรับปรุงซ่อมแซมนั้น การเคหะฯ ได้กำหนดไว้อย่างชัดเจนในสัญญาเช่า คือผู้ประกอบการมีหน้าที่ซ่อมแซมทั้งภายในและภายนอกอาคารด้วยค่าใช้จ่ายของผู้ประกอบการเอง ยกเว้นในส่วนโครงสร้างอาคาร การยกเว้นค่าเช่าเป็นการยกเว้นในส่วนเฉพาะห้องที่ต้องซ่อมแซมและไม่พร้อมอยู่อาศัยเท่านั้น ตามระยะเวลาซ่อม ไม่ได้ยกเว้นค่าเช่าตามมูลค่าของค่าเช่า</p>
+    <p>สำหรับการขอรับการสนับสนุนงบประมาณจากรัฐบาลเพื่อปรับปรุงซ่อมแซมอาคารเช่าเพื่อต้องการลดค่าใช้จ่ายของประชาชน เพราะหากการเคหะฯ ใช้จ่ายจากแหล่งเงินนอกงบประมาณอาจจำเป็นต้องเพิ่มค่าเช่า ซึ่งจะเป็นการผลักภาระไปยังประชาชน จึงขอจัดสรรงบประมาณรายการค่าปรับปรุงซ่อมแซมอาคารเช่าสำหรับผู้มีรายได้น้อย โดยในปีงบประมาณ 2568 ได้ของบฯ 153.25 ล้านบาท จำนวน 14 โครงการ เป็นโครงการที่นำไปเช่าเหมา 6 โครงการ โดยนำไปซ่อมแซมเฉพาะโครงสร้างของอาคารซึ่งเป็นหน้าที่ของการเคหะแห่งชาติ ในปีงบประมาณ 2569 ของบฯ ซ่อมแซมอาคารเช่าสำหรับผู้มีรายได้น้อย 33 โครงการ จำนวน 303.74 ล้านบาท เป็นโครงการที่นำไปให้เช่าเหมา 8 โครงการ นำไปซ่อมแซมเฉพาะโครงสร้างของอาคารซึ่งเป็นหน้าที่ของการเคหะฯ</p>
+    <p>ส่วนงบประมาณที่เพิ่มขึ้นจากปีงบประมาณ 2568 จำนวน 150.49 ล้านบาท เป้าหมายเพิ่มขึ้น 19 โครงการ เนื่องจากโครงการอาคารเช่าที่ขอรับสนับสนุนงบประมาณในปี 2569 มีสภาพอาคารชำรุดทรุดโทรมที่จำเป็นต้องได้รับการปรับปรุงซ่อมแซมอย่างเร่งด่วน เพื่อไม่ให้เกิดความเสียหายต่อโครงสร้างอาคารและส่งผลกระทบต่อชีวิตความเป็นอยู่ของผู้พักอาศัย</p>
   </div>
 </div>
-
 </body>
 </html>
