--- a/ต่างประเทศ.html
+++ b/ต่างประเทศ.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>ข่าวต่างประเทศ - ประชาสัมพันธ์ข่าวประจำชั่วโมง</title>
+  <title>ข่าวประเทศ - ประชาสัมพันธ์ข่าวประจำชั่วโมง</title>
   <style>
     body {
       font-family: 'Segoe UI', Tahoma, sans-serif;
@@ -13,7 +13,6 @@
       color: #333;
     }
 
-    /* ส่วนหัวเว็บ */
     header {
       background: linear-gradient(135deg, #1976d2, #0d47a1);
       color: white;
@@ -25,7 +24,6 @@
       box-shadow: 0 3px 8px rgba(0,0,0,0.2);
     }
 
-    /* เมนูนำทาง */
     nav {
       background: #333;
       display: flex;
@@ -41,11 +39,83 @@
     }
     nav a:hover {
       background: #1976d2;
-      color: #fff;
       border-radius: 4px;
     }
 
-    /* กล่องข่าว */
+    /* ---------- สไลด์โชว์ ---------- */
+    .slideshow-container {
+      position: relative;
+      max-width: 900px;
+      margin: 30px auto;
+      overflow: hidden;
+      border-radius: 12px;
+      box-shadow: 0 4px 12px rgba(0,0,0,0.2);
+    }
+    .mySlides {
+      display: none;
+      position: relative;
+    }
+    .mySlides img {
+      width: 100%;
+      height: auto;
+      display: block;
+    }
+    /* พื้นดำโปร่งหลังข้อความ */
+    .text {
+      position: absolute;
+      bottom: 20px;
+      left: 0;
+      width: 100%;
+      text-align: center;
+      background: rgba(0,0,0,0.5);
+      color: #fff;
+      padding: 12px;
+      font-size: 18px;
+      font-weight: bold;
+    }
+    /* ปุ่มลูกศรกลม */
+    .prev, .next {
+      cursor: pointer;
+      position: absolute;
+      top: 50%;
+      width: 40px;
+      height: 40px;
+      margin-top: -20px;
+      color: white;
+      font-size: 20px;
+      font-weight: bold;
+      border-radius: 50%;
+      background: rgba(0,0,0,0.6);
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      user-select: none;
+      transition: 0.3s;
+    }
+    .next { right: 15px; }
+    .prev { left: 15px; }
+    .prev:hover, .next:hover { background: rgba(0,0,0,0.85); }
+
+    /* จุดเลื่อน */
+    .dots {
+      text-align: center;
+      margin-top: 10px;
+    }
+    .dot {
+      cursor: pointer;
+      height: 12px;
+      width: 12px;
+      margin: 0 4px;
+      background-color: #bbb;
+      border-radius: 50%;
+      display: inline-block;
+      transition: 0.3s;
+    }
+    .active, .dot:hover {
+      background-color: #717171;
+    }
+
+    /* ---------- กล่องข่าว ---------- */
     .container {
       display: flex;
       flex-wrap: wrap;
@@ -68,11 +138,8 @@
     .news-box img {
       width: 100%;
       height: auto;
-      display: block;
     }
-    .news-content {
-      padding: 15px;
-    }
+    .news-content { padding: 15px; }
     .news-content h3 {
       font-size: 18px;
       margin: 0 0 10px;
@@ -86,58 +153,102 @@
       text-decoration: none;
       border-radius: 6px;
       font-weight: bold;
-      transition: background-color 0.3s ease;
+      transition: background-color 0.3s;
     }
-    .news-content a:hover {
-      background-color: #0d47a1;
-    }
+    .news-content a:hover { background-color: #0d47a1; }
 
     @media (max-width: 768px) {
-      .container {
-        flex-direction: column;
-        align-items: center;
-      }
+      .container { flex-direction: column; align-items: center; }
     }
   </style>
 </head>
 <body>
 
-  <header>ข่าวต่างประเทศ</header>
+  <header>ประชาสัมพันธ์ข่าวประจำชั่วโมง</header>
 
   <!-- เมนูนำทาง -->
   <nav>
     <a href="1.html">หน้าแรก</a>
     <a href="การเมือง.html">ข่าวการเมือง</a>
     <a href="ต่างประเทศ.html">ข่าวประเทศ</a>
-    <a href="เศรษฐกิจ.html">เศรษฐกิจ</a>
+    <a href="เศรษฐกิจ.html">ข่าวเศรษฐกิจ</a>
   </nav>
-<h2 style="text-align: center;">ข่าวต่างที่แนะนำ</h2>
-  <!-- ข่าวการเมือง -->
+  <h2 style="text-align: center;">ข่าวประเทศ</h2>
+  <!-- สไลด์โชว์ -->
+  <div class="slideshow-container">
+    <div class="mySlides">
+      <a href="ต่างประเทศ1.html"><img src="https://static.thairath.co.th/media/dFQROr7oWzulq5Fa6rfYk8BJ5g4SOPWK5l44ir9i0Z2Qqbg6xr6qY3zOTtU9tdmwPr3.webp"></a>
+      <div class="text">สุดระทึก เครื่องบินขับไล่มาเลย์ระเบิดขณะนำเครื่องขึ้น นักบินดีดตัวรอดหวุดหวิด </div>
+    </div>
+    <div class="mySlides">
+      <a href="ต่างประเทศ2.html"><img src="https://static.thairath.co.th/media/dFQROr7oWzulq5Fa6rfYlUeocqWrIXdBYx3gF9TNOA2UhhN5vaRL8HDPFfJBA1hXlqt.webp"></a>
+      <div class="text">ฮือฮา ภาพปรากฏการณ์ "ภูตแดง" หายาก กลางท้องฟ้ายามค่ำคืนของทิเบต</div>
+    </div>
+    <div class="mySlides">
+      <a href="ต่างประเทศ3.html"><img src="https://static.thairath.co.th/media/dFQROr7oWzulq5Fa6rfYkc1vJLNiI63CSPM1m1lsqcHRY8JevAPXg9aLqBZFzMTdpHB.webp"></a>
+      <div class="text">แหล่งข่าวเผย ปูตินเสนอยูเครน ยกภูมิภาคดอนบาส-ไม่เข้าร่วมนาโต-ถอนกองกำลังตะวันตก</div>
+    </div>
+
+    <!-- ปุ่มลูกศร -->
+    <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+    <a class="next" onclick="plusSlides(1)">&#10095;</a>
+  </div>
+
+  <!-- จุดเลื่อน -->
+  <div class="dots">
+    <span class="dot" onclick="currentSlide(1)"></span>
+    <span class="dot" onclick="currentSlide(2)"></span>
+    <span class="dot" onclick="currentSlide(3)"></span>
+  </div>
+
+ 
   <div class="container">
+    <!-- ข่าวที่ 1 -->
     <div class="news-box">
-      <img src="https://static.thairath.co.th/media/dFQROr7oWzulq5Fa6rfbDXSFGCn5Bj1XW5jw4ugXnIJZj6heZInFC7FeChBDeM22AF5.webp" alt="ข่าวการเมือง 1">
+      <img src="https://static.thairath.co.th/media/dFQROr7oWzulq5Fa6rfYk8BJ5g4SOPWK5l44ir9i0Z2Qqbg6xr6qY3zOTtU9tdmwPr3.webp">
       <div class="news-content">
-        <h3>ไต้หวันออกคำเตือนทางทะเล ขณะพายุไต้ฝุ่นโพดุลเคลื่อนตัวเข้าใกล้</h3>
-        <a href="ต่างประเทศ1.html" target="_blank">อ่านเพิ่มเติม</a>
+        <h3>สุดระทึก เครื่องบินขับไล่มาเลย์ระเบิดขณะนำเครื่องขึ้น นักบินดีดตัวรอดหวุดหวิด </h3>
+        <a href="ต่างประเทศ1.html">อ่านเพิ่มเติม</a>
       </div>
     </div>
-
+    <!-- ข่าวที่ 2 -->
     <div class="news-box">
-      <img src="https://static.thairath.co.th/media/dFQROr7oWzulq5Fa6rfbDXEJ6mqQJwMLuDMrzQM5QulMajodTMiBUm72PxnOe8FJ6wL.webp" alt="ข่าวการเมือง 2">
+      <img src="https://static.thairath.co.th/media/dFQROr7oWzulq5Fa6rfYlUeocqWrIXdBYx3gF9TNOA2UhhN5vaRL8HDPFfJBA1hXlqt.webp">
       <div class="news-content">
-        <h3>พายุทอร์นาโดไฟพัดผ่านกลุ่มควันจากไฟป่าในโปรตุเกส</h3>
-        <a href="ต่างประเทศ2.html" target="_blank">อ่านเพิ่มเติม</a>
+        <h3>ฮือฮา ภาพปรากฏการณ์ "ภูตแดง" หายาก กลางท้องฟ้ายามค่ำคืนของทิเบต</h3>
+        <a href="ต่างประเทศ2.html">อ่านเพิ่มเติม</a>
       </div>
     </div>
-
+    <!-- ข่าวที่ 3 -->
     <div class="news-box">
-      <img src="https://static.thairath.co.th/media/dFQROr7oWzulq5Fa6rfbDW7XS2n7nj7BUdQhfQAyHpOK79qoyvcfqn0vFtCOPanzt7C.webp" alt="ข่าวการเมือง 3">
+      <img src="https://static.thairath.co.th/media/dFQROr7oWzulq5Fa6rfYkc1vJLNiI63CSPM1m1lsqcHRY8JevAPXg9aLqBZFzMTdpHB.webp">
       <div class="news-content">
-        <h3>เนปาลเสนอปีนฟรี 97 ยอดเขา ขณะที่นักท่องเที่ยวไปเอเวอเรสต์เพิ่มขึ้น</h3>
-        <a href="ต่างประเทศ3.html" target="_blank">อ่านเพิ่มเติม</a>
+        <h3>แหล่งข่าวเผย ปูตินเสนอยูเครน ยกภูมิภาคดอนบาส-ไม่เข้าร่วมนาโต-ถอนกองกำลังตะวันตก</h3>
+        <a href="ต่างประเทศ3.html">อ่านเพิ่มเติม</a>
       </div>
     </div>
   </div>
 
+  <script>
+    let slideIndex = 1;
+    showSlides(slideIndex);
+
+    function plusSlides(n) { showSlides(slideIndex += n); }
+    function currentSlide(n) { showSlides(slideIndex = n); }
+
+    function showSlides(n) {
+      let i;
+      let slides = document.getElementsByClassName("mySlides");
+      let dots = document.getElementsByClassName("dot");
+      if (n > slides.length) { slideIndex = 1 }
+      if (n < 1) { slideIndex = slides.length }
+      for (i = 0; i < slides.length; i++) { slides[i].style.display = "none"; }
+      for (i = 0; i < dots.length; i++) { dots[i].className = dots[i].className.replace(" active", ""); }
+      slides[slideIndex-1].style.display = "block";
+      dots[slideIndex-1].className += " active";
+    }
+  </script>
+
 </body>
 </html>
+
