--- a/ต่างประเทศ1.html
+++ b/ต่างประเทศ1.html
@@ -76,24 +76,21 @@
   <a href="1.html">หน้าแรก</a>
   <a href="การเมือง.html">ข่าวการเมือง</a>
   <a href="ต่างประเทศ.html">ข่าวประเทศ</a>
-  <a href="เศรษฐกิจ.html">เศรษฐกิจ</a>
+  <a href="เศรษฐกิจ.html">ข่าวเศรษฐกิจ</a>
 </nav>
 
 <div class="headline">
-  <img src="https://static.thairath.co.th/media/dFQROr7oWzulq5Fa6rfbDXSFGCn5Bj1XW5jw4ugXnIJZj6heZInFC7FeChBDeM22AF5.webp" alt="พาดหัวข่าวการเมือง">
+  <img src="https://static.thairath.co.th/media/dFQROr7oWzulq5Fa6rfYk8BJ5g4SOPWK5l44ir9i0Z2Qqbg6xr6qY3zOTtU9tdmwPr3.webp" alt="พาดหัวข่าวการเมือง">
   <div class="headline-content">
-    <h1>ไต้หวันออกคำเตือนทางทะเล ขณะพายุไต้ฝุ่นโพดุลเคลื่อนตัวเข้าใกล้</h1>
-    <p>ไต้หวันกำลังเร่งอพยพประชาชนหลายร้อยคนออกจากพื้นที่ชายฝั่งตะวันออกเฉียงใต้ของเกาะ ก่อนที่พายุไต้ฝุ่นโพดุลจะพัดขึ้นฝั่ง ขณะที่พื้นที่ใกล้เคียงกำลังฟื้นตัวจากน้ำท่วมและลมกระโชกแรงจากพายุลูกก่อน
-สำนักงานอุตุนิยมวิทยากลางไต้หวัน ออกคำเตือนเกี่ยวกับพายุไต้ฝุ่นโพดุล ในวันนี้ (12 ส.ค.) ขณะที่พายุเคลื่อนตัวเข้าใกล้เกาะ โดยเตือนว่าผลกระทบอาจเริ่มรู้สึกได้ตั้งแต่วันที่ 13 ส.ค.
-สำนักงานอุตุนิยมวิทยาระบุว่าพายุโพดุลกำลังเคลื่อนตัวไปทางตะวันตก-ตะวันตกเฉียงเหนือ ด้วยความเร็วลมต่อเนื่อง 119 กิโลเมตรต่อชั่วโมง และมีลมกระโชกแรงถึง 155 กิโลเมตรต่อชั่วโมง คาดว่าเวลา 08.00 น. ของวันพุธ พายุไต้ฝุ่นจะเคลื่อนตัวห่างจากเขตไถตง ไปทางตะวันออก-ตะวันออกเฉียงใต้ประมาณ 140 กิโลเมตร คาดว่าจะมีประกาศเตือนภัยทางบกในช่วงบ่ายวันนี้ ซึ่งบ่งชี้ว่าบางส่วนของไต้หวันจะอยู่ในบริเวณขอบนอกของพายุภายใน 18 ชั่วโมง
-ในเขตนครฮวาเหลียนทางตะวันออก ประชาชนเกือบ 700 คน จะต้องอพยพออกจากบ้านเรือนเพื่อป้องกันความเสี่ยงจากน้ำล้นจากเขื่อนธรรมชาติที่เกิดขึ้นหลังจากเกิดดินถล่มจากพายุไต้ฝุ่นลูกก่อนหน้านี้
-นอกจากนั้น มีการเตรียมการในพื้นที่ชายฝั่งและพื้นที่เกษตรกรรม ที่เมืองอี๋หลาน ประเทศไต้หวัน เรือประมงกำลังกลับเข้าฝั่ง โดยชาวประมงกำลังรัดเชือกผูกเรือให้แน่นเพื่อรับมือกับลมที่พัดเข้ามา
-เกษตรกรก็กำลังใช้มาตรการป้องกันเช่นกัน ชาวสวนผลไม้ท้องถิ่นรายหนึ่งกล่าวว่า พวกเขากำลังเสริมความแข็งแรงให้กับต้นไม้ด้วยหลักเพื่อป้องกันไม่ให้ต้นไม้ล้ม
-ส่วนที่เมืองเจียอี้ ประเทศไต้หวัน เกษตรกรผู้เพาะเลี้ยงหอยนางรมเร่งเก็บผลผลิตก่อนที่พายุไต้ฝุ่นจะพัดมาถึง เพื่อหลีกเลี่ยงความเสียหายจากคลื่นลมแรง
-CWA คาดการณ์ว่าจะมีฝนตกหนักและฝนตกหนักมากในพื้นที่ทางตะวันออก ตะวันออกเฉียงใต้ และเทือกเขาทางตอนใต้ของไต้หวัน เริ่มตั้งแต่วันพุธนี้เป็นต้นไป โดยเตือนประชาชนให้เฝ้าระวังน้ำท่วม ดินถล่ม และลมแรง ทางการขอให้ประชาชนเตรียมพร้อม หลีกเลี่ยงกิจกรรมริมทะเล และติดตามข่าวสารสภาพอากาศอย่างเป็นทางการ
-ทั้งนี้ หลังจากพายุพัดขึ้นฝั่งแล้ว คาดว่าพายุจะพัดถล่มชายฝั่งตะวันตกซึ่งมีประชากรหนาแน่น ก่อนที่จะมุ่งหน้าสู่มณฑลฝูเจี้ยนทางตอนใต้ของจีนในปลายสัปดาห์นี้.</p>
+    <h1>สุดระทึก เครื่องบินขับไล่มาเลย์ระเบิดขณะนำเครื่องขึ้น นักบินดีดตัวรอดหวุดหวิด </h1>
+    <p>เกิดอุบัติเหตุเครื่องบินขับไล่ของกองทัพอากาศมาเลเซีย เครื่องยนต์ระเบิดไฟลุกไหม้กลางอากาศ ขณะกำลังนำเครื่องขึ้นที่สนามบินสุลต่านอาหมัดชาห์ เมืองกวนตัน นักบินดีดตัวออกมารอดหวุดหวิด</p>
+    <p>สื่อต่างประเทศเผยคลิปวินาทีเครื่องบินขับไล่ แมคดอนเนล ดักลาส เอฟเอ-18 ฮอร์เน็ต (McDonnell Douglas F/A-18 Hornet) ของกองทัพอากาศมาเลเซีย เครื่องยนต์ระเบิดไฟลุกไหม้กลางอากาศ ที่สนามบินสุลต่านอาหมัดชาห์ เมืองกวนตัน เมื่อคืนวันที่ 21 สิงหาคมที่ผ่านมาตามเวลาในท้องถิ่น</p>
+    <p>รายงานระบุว่า เครื่องบินลำดังกล่าวเกิดไฟลุกจากบริเวณเครื่องยนต์ตั้งแต่กำลังวิ่งขึ้นรันเวย์ และเพียงไม่กี่อึดใจต่อมาก็เกิดระเบิดเป็นลูกไฟขนาดใหญ่ ครอบคลุมทั้งลำเครื่อง โชคดีที่นักบิน 2 นายสามารถดีดตัวออกมาได้ทัน</p>
+    <p>ด้านกองทัพอากาศมาเลเซียออกแถลงการณ์ยืนยันเหตุการณ์ โดยระบุว่าขณะนี้กำลังเร่งดำเนินการตรวจสอบและจะอัปเดตความคืบหน้าต่อไป</p>
+    <p>ทั้งนี้ เครื่องบินขับไล่ F/A-18D Hornet ถือเป็นเครื่องบินทหารสมรรถนะสูง ใช้ในภารกิจโจมตีและป้องกันทางอากาศ และเป็นกำลังหลักของกองทัพอากาศมาเลเซียมาหลายทศวรรษ เหตุการณ์ครั้งนี้จึงได้รับความสนใจอย่างกว้างขวาง ทั้งในประเทศและต่างประเทศ โดยจนถึงขณะนี้ ยังไม่มีรายงานผู้เสียชีวิตหรือบาดเจ็บเพิ่มเติมจากอุบัติเหตุดังกล่าว.</p>
   </div>
 </div>
-
 </body>
 </html>
+
+
