--- a/ต่างประเทศ2.html
+++ b/ต่างประเทศ2.html
@@ -76,19 +76,17 @@
   <a href="1.html">หน้าแรก</a>
   <a href="การเมือง.html">ข่าวการเมือง</a>
   <a href="ต่างประเทศ.html">ข่าวประเทศ</a>
-  <a href="เศรษฐกิจ.html">เศรษฐกิจ</a>
+  <a href="เศรษฐกิจ.html">ข่าวเศรษฐกิจ</a>
 </nav>
 
 <div class="headline">
-  <img src="https://static.thairath.co.th/media/dFQROr7oWzulq5Fa6rfbDXEJ6mqQJwMLuDMrzQM5QulMajodTMiBUm72PxnOe8FJ6wL.webp" alt="พาดหัวข่าวการเมือง">
+  <img src="https://static.thairath.co.th/media/dFQROr7oWzulq5Fa6rfYlUeocqWrIXdBYx3gF9TNOA2UhhN5vaRL8HDPFfJBA1hXlqt.webp" alt="พาดหัวข่าวการเมือง">
   <div class="headline-content">
-    <h1>พายุทอร์นาโดไฟพัดผ่านกลุ่มควันจากไฟป่าในโปรตุเกส</h1>
-    <p>คลิปวิดีโอพายุทอร์นาโดไฟขนาดเล็กถูกบันทึกภาพไว้ได้ในประเทศโปรตุเกส ขณะที่โปรตุเกสกำลังต่อสู้กับไฟป่าหลายระลอก ท่ามกลางคลื่นความร้อนระลอกใหม่
-เมื่อสุดสัปดาห์ที่ผ่านมา รุย เวนตูรา ผู้เชี่ยวชาญด้านการจัดการไฟป่า ได้บันทึกภาพเหตุการณ์นี้ไว้ด้วยโทรศัพท์มือถือของเขาที่เมืองโมอิเมนตา ดา เบย์รา ทางตอนเหนือของประเทศโปรตุเกส
-ขณะนี้ไฟป่าในเมืองโมอิเมนตา ดา เบย์รา อยู่ภายใต้การควบคุมแล้ว แต่ยังมีอีกหลายพื้นที่ที่สถานการณ์ยังน่ากังวลเมื่อวันจันทร์ (11 ส.ค.)
-เจ้าหน้าที่ดับเพลิงประมาณ 2,000 นายกำลังลงพื้นที่เพื่อพยายามดับไฟในพื้นที่เสี่ยงภัยหลายแห่งทั่วประเทศ เมื่อวันอาทิตย์ อุณหภูมิในบางพื้นที่ของประเทศสูงถึง 43 องศาเซลเซียส และคาดว่าจะยังคงสูงกว่า 40 องศาเซลเซียส ในหลายพื้นที่ โดยเฉพาะในพื้นที่ตอนในของประเทศ
-โปรตุเกสยังคงอยู่ภายใต้การแจ้งเตือนสภาพอากาศรุนแรงจนถึงวันพุธ เนื่องจากมีความเสี่ยงสูงที่จะเกิดไฟป่า เช่นเดียวกับสเปน ที่ไฟป่าได้ลุกลามอย่างรวดเร็วห่างจากกรุงมาดริด เมืองหลวงของสเปนประมาณ 21 กิโลเมตร
-นอกจากนั้น ในแคว้นคาสตีลและเลออน ห่างออกไปทางเหนือของกรุงมาดริด ความร้อนจัดและลมแรงทำให้เกิด "พายุหมุนไฟ" ขณะที่ไฟป่าได้ลุกไหม้บ้านเรือนหลายหลังในพื้นที่ใกล้เขตลาส มาดูราส ที่ได้รับการขึ้นทะเบียนเป็นมรดกโลกของยูเนสโก ประชาชนราว 800 คนได้รับคำสั่งให้ละทิ้งบ้านเรือนในหมู่บ้าน 6 แห่ง.</p>
+    <h1>ฮือฮา ภาพปรากฏการณ์ "ภูตแดง" หายาก กลางท้องฟ้ายามค่ำคืนของทิเบต</h1>
+    <p>ฮือฮา ช่างภาพจีนบันทึกภาพปรากฎการณ์ "ฟ้าผ่าแดง" หรือ "ภูตแดง" เกิดขึ้นกลางท้องฟ้ายามค่ำคืนใกล้กับภูเขาของทิเบต</p>
+    <p>วันที่ 22 สิงหาคม 2568 สำนักข่าวซินหัว ของจีน รายงานว่า ทีมช่างภาพของจีนสามารถบันทึกภาพปรากฏการณ์ "ฟ้าผ่าแดง" หายาก หรือรู้จักกันในชื่อ “ภูตแดง” (red sprites) กลางท้องฟ้ายามค่ำคืนใกล้กับภูเขากังเหรินโปฉี หรือเขาไกรลาส ซึ่งเป็นสถานที่ศักดิ์สิทธิ์ของผู้นับถือศาสนาฮินดูและพุทธศาสนา ที่ความสูงเหนือระดับน้ำทะเล 6,656 เมตร ในเขตปกครองตนเองทิเบต ทางตะวันตกเฉียงใต้ของจีน</p>
+    <p>รายงานระบุว่าช่างภาพทีมนี้มาจากไชน่า สตาร์วิชัน อลิอันซ์ (China StarVision Alliance) ซึ่งเป็นแพลตฟอร์มสำหรับช่างภาพดาราศาสตร์ของจีนเกือบ 1,000 คน และธุรกิจที่เกี่ยวข้องกับการท่องเที่ยวชมท้องฟ้าตอนค่ำคืน โดยพวกเขาสามารถบันทึกภาพการปะทุสีแดงที่ดูคล้ายดอกไม้ไฟหรือแมงกะพรุนเรืองแสงระหว่างเกิดพายุฝนฟ้าคะนองเมื่อช่วงเช้ามืดของวันพฤหัสบดี (21 ส.ค.) ที่ผ่านมา</p>
+    <p>ทั้งนี้ ผู้เชี่ยวชาญอธิบายว่า ฟ้าผ่าแดงคือการคายประจุไฟฟ้าขึ้นสู่ด้านบนแบบผิดปกติที่มีต้นกำเนิดมาจากพายุฝนฟ้าคะนอง แตกต่างจากกรณีฟ้าผ่าจากเมฆลงสู่พื้นหรือภายในเมฆทั่วไป โดยฟ้าผ่าแดงเกิดขึ้นเมื่อประจุไฟฟ้าจำนวนมากปลดปล่อยออกมารบกวนสนามไฟฟ้าในชั้นบรรยากาศเบื้องบน ก่อให้เกิดปรากฏการณ์แสงสีแดงเรืองแสงเหนือพายุฝนฟ้าคะนอง.</p>
   </div>
 </div>
 
