--- a/ต่างประเทศ3.html
+++ b/ต่างประเทศ3.html
@@ -76,25 +76,24 @@
   <a href="1.html">หน้าแรก</a>
   <a href="การเมือง.html">ข่าวการเมือง</a>
   <a href="ต่างประเทศ.html">ข่าวประเทศ</a>
-  <a href="เศรษฐกิจ.html">เศรษฐกิจ</a>
+  <a href="เศรษฐกิจ.html">ข่าวเศรษฐกิจ</a>
 </nav>
 
-<div class="headline">
-  <img src="https://static.thairath.co.th/media/dFQROr7oWzulq5Fa6rfbDW7XS2n7nj7BUdQhfQAyHpOK79qoyvcfqn0vFtCOPanzt7C.webp" alt="พาดหัวข่าวการเมือง">
+<div class="headline"> 
   <div class="headline-content">
-    <h1>เนปาลเสนอปีนฟรี 97 ยอดเขา ขณะที่นักท่องเที่ยวไปเอเวอเรสต์เพิ่มขึ้น</h1>
-    <p>เนปาลจะอนุญาตให้ปีนยอดเขาหิมาลัย 97 ลูกได้ฟรีเป็นเวลาสองปี เพื่อกระตุ้นการท่องเที่ยวในพื้นที่ห่างไกล
-ค่าธรรมเนียมใบอนุญาตสำหรับการพิชิตยอดเขาเอเวอเรสต์ ซึ่งเป็นยอดเขาที่สูงที่สุดในโลก ในช่วงฤดูท่องเที่ยวจะเพิ่มขึ้นเป็น 15,000 ดอลลาร์สหรัฐ (ประมาณ 486,525 บาท) ตั้งแต่เดือนกันยายนเป็นต้นไป ซึ่งถือเป็นการปรับขึ้นครั้งแรกในรอบเกือบทศวรรษ
-สำนักงานการท่องเที่ยวเนปาลกล่าวว่า หวังว่าโครงการริเริ่มนี้จะเน้นย้ำถึง "ผลิตภัณฑ์และจุดหมายปลายทางด้านการท่องเที่ยวที่ยังไม่ถูกสำรวจ" ของประเทศ
-การปีนเขาสร้างรายได้มหาศาลให้กับเนปาล ซึ่งเป็นที่ตั้งของภูเขาที่สูงที่สุดในโลก 10 ลูก ค่าธรรมเนียมการปีนเขาสร้างรายได้ 5.9 ล้านดอลลาร์สหรัฐ (ราว 191 ล้านบาท) ในปีที่แล้ว โดยยอดเขาเอเวอเรสต์สร้างรายได้กว่า 3 ใน 4 ของรายได้ทั้งหมด
-ยอดเขาที่ได้รับการยกเว้นค่าธรรมเนียมตั้งอยู่ในจังหวัดการ์นาลีและสุดูร์ปัชิมของเนปาล ซึ่งมีความสูงระหว่าง 5,970 เมตร ถึง 7,132 เมตร ทั้งสองจังหวัดซึ่งตั้งอยู่ทางตะวันตกสุดของเนปาล ถือเป็นจังหวัดที่ยากจนที่สุดและพัฒนาน้อยที่สุดของประเทศ
-หิมาล เกาตัม ผู้อำนวยการสำนักงานการท่องเที่ยวเนปาลกล่าวว่า "แม้จะมีความสวยงามตระการตา แต่จำนวนนักท่องเที่ยวและนักปีนเขาที่นี่กลับน้อยมาก เนื่องจากการเข้าถึงพื้นที่นั้นยากลำบาก เราหวังว่ามาตรการใหม่นี้จะเป็นประโยชน์ ซึ่งสามารถสร้างงาน สร้างรายได้ และเสริมสร้างเศรษฐกิจท้องถิ่นได้"
-อย่างไรก็ตาม ยังไม่เป็นที่แน่ชัดว่าทางการมีแผนที่จะปรับปรุงโครงสร้างพื้นฐานและการเชื่อมต่อกับพื้นที่ห่างไกลเหล่านี้หรือไม่ และชุมชนในพื้นที่เหล่านี้จะรับมือกับการหลั่งไหลเข้ามาของนักปีนเขาได้ดีเพียงใด หากโครงการปีนเขาฟรีประสบความสำเร็จ
-ในอดีต นักปีนเขาไม่ค่อยสนใจยอดเขาห่างไกลทั้ง 97 ยอดนี้ โดยมีนักปีนเขาเพียง 68 คนเท่านั้นที่กล้าเสี่ยงไปที่นั่นในช่วงสองปีที่ผ่านมา ในทางตรงกันข้าม มีการออกใบอนุญาตปีนเขาเอเวอเรสต์ถึง 421 ใบในปี 2024 เพียงปีเดียว
-ยอดเขาเอเวอเรสต์ ซึ่งเป็นยอดเขาที่สูงที่สุดในโลก มีความสูงกว่า 8,849 เมตร ในช่วงไม่กี่ปีที่ผ่านมา ต้องเผชิญกับปัญหาความแออัด ปัญหาสิ่งแวดล้อม และความพยายามปีนเขาที่นำไปสู่ความสูญเสียชีวิตหลายครั้ง
-ในเดือนเมษายน 2024 ศาลฎีกาเนปาลได้มีคำสั่งให้รัฐบาลจำกัดจำนวนใบอนุญาตปีนเขาที่ออกให้สำหรับยอดเขาเอเวอเรสต์และยอดเขาอื่นๆ อีกหลายยอด โดยระบุว่าต้องเคารพขีดความสามารถของยอดเขา
-ในเดือนมกราคมปีนี้ ทางการได้ประกาศขึ้นค่าธรรมเนียมใบอนุญาต 36% สำหรับผู้ที่พยายามพิชิตยอดเขานอกฤดูกาลปีนเขาเดือนเมษายนถึงพฤษภาคม ค่าใช้จ่ายในการปีนยอดเขาเอเวอเรสต์ในช่วงเดือนกันยายนถึงพฤศจิกายนจะอยู่ที่ 7,500 ดอลลาร์สหรัฐ และ 3,750 ดอลลาร์สหรัฐ ในช่วงเดือนธันวาคมถึงกุมภาพันธ์
-รัฐสภาเนปาลกำลังถกเถียงกันเกี่ยวกับกฎหมายฉบับใหม่ที่กำหนดให้ผู้ที่ต้องการพิชิตยอดเขาเอเวอเรสต์ต้องพิชิตยอดเขาที่มีความสูงกว่า 7,000 เมตรในประเทศให้ได้ก่อน สิ่งนี้ทำให้ยอดเขาในการ์นาลีและสุดูร์ปัชิมเป็น "สถานที่ฝึกซ้อมที่เหมาะสม".</p>
+  <img src="https://static.thairath.co.th/media/dFQROr7oWzulq5Fa6rfYkc1vJLNiI63CSPM1m1lsqcHRY8JevAPXg9aLqBZFzMTdpHB.webp">
+    <h1>แหล่งข่าวเผย ปูตินเสนอยูเครน ยกภูมิภาคดอนบาส-ไม่เข้าร่วมนาโต-ถอนกองกำลังตะวันตก</h1>
+    <p>แหล่งข่าวเผย ประธานาธิบดีวลาดิเมียร์ ปูติน เสนอให้ยูเครนยอมยกพื้นที่ภูมิภาคดอนบาสทั้งหมด รวมถึงยกเลิกความพยายามเข้าร่วมองค์การนาโต และห้ามกองกำลังตะวันตกเข้ามาในยูเครน ด้านเจ้าหน้าที่อียูเตือนอย่าตกหลุมพราง</p>
+    <p>ตามรายงานจากแหล่งข่าวใกล้ชิดรัฐบาลรัสเซีย ระบุว่า รัสเซียเสนอเงื่อนไขใหม่เพื่อยุติสงครามยูเครน หลังการประชุมสุดยอดระหว่างประธานาธิบดีวลาดิเมียร์ ปูติน และประธานาธิบดีโดนัลด์ ทรัมป์ ที่รัฐอะลาสกาเมื่อวันที่ 15 ส.ค. ที่ผ่านมา โดยปูตินเรียกร้องให้ยูเครนยกภูมิภาคดอนบาสทั้งหมดให้กับรัสเซีย รวมถึงยกเลิกความพยายามเข้าร่วมองค์การนาโต รักษาความเป็นกลาง และห้ามกำลังทหารตะวันตกเข้ามาประจำการในประเทศ </p>
+    <p>การประชุมครั้งนี้ถือเป็นการพบปะระดับสูงสุดรัสเซีย-สหรัฐฯ ในรอบกว่า 4 ปี โดยทั้งสองผู้นำใช้เวลาราว 3 ชั่วโมง หารือถึงแนวทางประนีประนอมเพื่อยุติสงครามในยูเครน แม้ในการแถลงหลังการประชุมจะไม่มีการเปิดเผยรายละเอียดมากนัก แต่แหล่งข่าวระบุว่าปูตินแสดงท่าทีพร้อมปรับลดข้อเรียกร้องบางส่วนเมื่อเทียบกับข้อเสนอเดิมในปี 2024</p>
+    <p>ข้อเสนอล่าสุดของรัสเซียยังคงยืนยันให้ยูเครนสละพื้นที่ภูมิภาคดอนบาสที่ยังอยู่ในการควบคุม แต่ในทางกลับกัน รัสเซียพร้อมที่จะหยุดการรุกคืบในแคว้นซาโปริชเชียและเคอร์ซอน และอาจคืนพื้นที่เล็กน้อยที่ครอบครองในแคว้นคาร์คิฟ ซูมี และดนีโปรเปตรอฟสค์ ให้กับยูเครน ข้อมูลจากสหรัฐฯ ระบุว่าปัจจุบันรัสเซียครองพื้นที่ 88% ของดอนบาส และ 73% ของซาโปริชเชียและเคอร์ซอน</p>
+    <p>อย่างไรก็ตาม ข้อเรียกร้องสำคัญอื่น ๆ ของปูตินยังไม่เปลี่ยนแปลง ทั้งการห้ามยูเครนเข้าร่วมนาโต การจำกัดกองทัพยูเครน และการรับรองอย่างเป็นทางการว่าจะไม่มีกำลังตะวันตกเข้ามาประจำการในยูเครน ขณะที่รัฐบาลเคียฟยังคงยืนยันไม่ยอมถอนตัวจากดินแดนที่ได้รับการยอมรับตามกฎหมายระหว่างประเทศ</p>
+    <p>ประธานาธิบดีโวโลดีมีร์ เซเลนสกี กล่าวว่าภูมิภาคดอนบาสเป็นปราการสำคัญในการสกัดกั้นรัสเซียและไม่อาจสละได้ พร้อมย้ำว่ายูเครนมีเป้าหมายตามรัฐธรรมนูญในการเข้าร่วมนาโต และเรื่องนี้ไม่ใช่สิ่งที่รัสเซียมีสิทธิ์กำหนด ขณะที่ทำเนียบขาวและนาโต้ยังไม่ให้ความเห็นต่อข้อเสนอนี้</p>
+    <p>ด้านนักการทูตระดับสูงของสหภาพยุโรป (อียู) ได้ออกมาเตือนว่าไม่ควรกดดันให้ยูเครนยอมยกดินแดนให้รัสเซีย ซึ่งเป็นส่วนหนึ่งของข้อตกลงสันติภาพในอนาคต</p>
+    <p>ในการให้สัมภาษณ์ครั้งแรกนับตั้งแต่ผู้นำสหภาพยุโรปเข้าร่วมการเจรจาสันติภาพระหว่างโดนัลด์ ทรัมป์กับยูเครนที่ทำเนียบขาว คายา คัลลาส กล่าวกับรายการทูเดย์ของบีบีซีว่า การปล่อยให้รัสเซียยึดครองดินแดนของยูเครนเป็น "กับดักที่ปูตินต้องการให้เราเดินเข้าไป" เธอยอมรับว่ายังไม่มี "ขั้นตอนที่เป็นรูปธรรม" มากนักสำหรับการใช้กำลังยับยั้งในขั้นตอนการเจรจานี้</p>
+    <p>เธอกล่าวว่าเป็นหน้าที่ของรัฐสมาชิกของ "พันธมิตรผู้สนับสนุนยูเครนสู่สันติภาพ" ที่จะกำหนดว่าพวกเขาสามารถมีส่วนร่วมได้มากเพียงใด และยังไม่ชัดเจนว่ากองกำลังเหล่านี้จะปฏิบัติการในฐานะใด</p>
+    <p>แม้รัสเซียยังควบคุมพื้นที่ยูเครนราว 1 ใน 5 แต่แหล่งข่าวใกล้ชิดรัฐบาลรัสเซียมองว่าการประชุมที่รัฐอะลาสกา อาจเป็นโอกาสดีที่สุดในการเจรจาสันติภาพตั้งแต่สงครามเริ่มต้น อย่างไรก็ตาม ปัญหาหลักยังอยู่ที่การยอมรับของยูเครนและท่าทีของสหรัฐฯ รวมถึงข้อกังขาต่อความชอบธรรมของเซเลนสกี ซึ่งปูตินตั้งคำถามซ้ำ ๆ หลังวาระการดำรงตำแหน่งของเขาหมดไปตั้งแต่กลางปี 2024 แต่ยูเครนยืนยันว่าเซเลนสกียังเป็นประธานาธิบดีโดยชอบธรรม</p>
+    <p>ผู้นำยุโรปอย่างอังกฤษ ฝรั่งเศส และเยอรมนี ยังคงแสดงความไม่มั่นใจว่าปูตินมีความจริงใจต้องการยุติสงคราม ขณะที่ทรัมป์ย้ำว่าเขาต้องการยุติ "การนองเลือด" และพร้อมเดินหน้าจัดการประชุมสามฝ่ายระหว่างสหรัฐฯ รัสเซีย และยูเครนในอนาคตอันใกล้.</p>
 </div>
 
 </body>
