--- a/เศรษฐกิจ1.html
+++ b/เศรษฐกิจ1.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>ข่าวต่างประเทศ - ประชาสัมพันธ์ข่าวประจำชั่วโมง</title>
+  <title>ข่าวเศรษฐกิจ - ประชาสัมพันธ์ข่าวประจำชั่วโมง</title>
   <style>
     body {
       font-family: Tahoma, "Segoe UI", Arial, sans-serif; /* ฟอนต์เรียบง่ายแบบเว็บข่าว */
@@ -76,16 +76,19 @@
   <a href="1.html">หน้าแรก</a>
   <a href="การเมือง.html">ข่าวการเมือง</a>
   <a href="ต่างประเทศ.html">ข่าวประเทศ</a>
-  <a href="เศรษฐกิจ.html">เศรษฐกิจ</a>
+  <a href="เศรษฐกิจ.html">ข่าวเศรษฐกิจ</a>
 </nav>
 
 <div class="headline">
-  <img src="https://static.thairath.co.th/media/dFQROr7oWzulq5Fa6rfcDBmCWQPejX6fzSFzPVqk1IYp4E2iiNFisUb8JZREmgBZlyw.jpg" alt="พาดหัวข่าวการเมือง">
+  <img src="https://static.thairath.co.th/media/Dtbezn3nNUxytg04aYnqW8u0X99pRcZMlhOyoSDs1FWckw.jpg" alt="พาดหัวข่าวการเมือง">
   <div class="headline-content">
-    <h1>ราคาทองวันนี้ล่าสุด 19 สิงหาคม 2568 ปรับลด 150 บาท ราคาทองรูปพรรณ บาทละ 52,100 บาท</h1>
-    <p>เปิดตลาด "ราคาทองคำล่าสุดวันนี้" อังคาร ที่ 19 สิงหาคม 2568 ราคาปรับลด 150 บาท ตามประกาศของสมาคมค้าทองคำ ณ เวลา 9.02 น. ราคาทองคำแท่งวันนี้ ขายออกบาทละ 51,300.00 บาท ราคาทองรูปพรรณวันนี้ ขายออกบาทละ  52,100.00 บาท
-ราคาทองคำวันนี้ล่าสุด 19 สิงหาคม 2568 เช้า/ครั้งที่ 1 ณ เวลา 9.02 น.  
-วันที่ 19 สิงหาคม 2568 สมาคมค้าทองคำ รายงานว่า ราคาทองไทยวันนี้ ครั้งที่ 1 เมื่อเวลา 9.02 น. พบราคาปรับลด 150 บาท ส่งผลให้ "ราคาทองคำแท่ง" รับซื้อบาทละ 51,200.00 บาท ขายออกบาทละ 51,300.00 บาท ส่วน "ราคาทองรูปพรรณ" รับซื้อบาทละ 50,179.60 บาท ขายออกบาทละ 52,100.00 บาท เช็กราคาทองคำวันนี้ ราคาทองซื้อขายวันนี้</p>
+    <h1>ชะตากรรมชาวนา หลังราคาข้าวตกต่ำ</h1>
+    <p>หลายปัจจัยกระทบต่อราคาข้าวชาวนาบอกว่าราคาตกต่ำมากสุดรอบ 10 ปี แม้ว่าชาวนาจะได้รับเงินเยียวยาจากภาครัฐไร่ละ 1000 บาท 10 ไร่ เเต่นั่นเป็นมาตรการช่วยเฉพาะหน้า ชาวนายังมีความกังวลราคาข้าวในประเทศจะตกต่ำลงไปอีก ทำให้บางส่วนตัดสินใจจะเลิกทำนา</p>
+    <p>ชาวนาในจังหวัดพระนครศรีอยุธยา อยู่ระหว่างเก็บเกี่ยวผลผลิตข้าวนาปรัง ซึ่งเป็นช่วงปลายฤดูกาลแล้ว แต่ราคาข้าวเปลือกยังคงตกต่ำต่อเนื่อง ปัจจุบันข้าวความชื้น 15% เฉลี่ยอยู่ที่ตันละ 6,300 บาท หากเทียบกับปี 2558 ข้าวความชื้น 15% เฉลี่ยอยู่ที่ตันละ 7,800 บาท ถือว่าตกต่ำมากที่สุดในรอบ 10 ปี</p>
+    <p>ชาวนา สะท้อนว่า แม้ภาครัฐจะเตรียมให้เงินช่วยเหลือตามโครงการไร่ละ 1,000 บาท ครัวเรือนละไม่เกิน 10 ไร่ แต่ในอนาคตหากราคาข้าวยังคงตกต่ำ โครงการที่รัฐเข้ามาช่วยเยียวยาก็คงไม่เพียงพอ เพราะชาวนาขายข้าวได้ต่ำกว่าต้นทุน อีกทั้งยังให้ลดพื้นที่การเพาะปลูก ถือว่าเป็นการตัดอาชีพชาวนา โดยหลังจากนี้อยากจะขอให้ภาครัฐ เข้ามารับฟังปัญหาและเร่ง เร่งออกมาตรการช่วยเหลือที่มากกว่าการแจกเงิน</p>
+    <p>ด้าน ร.ต.ท.เจริญ เหล่าธรรมทัศน์ นายกสมาคมผู้ส่งออกข้าว ระบุว่า ปัจจุบันยังไม่เห็นสัญญาณราคาข้าวกลับมาสูงขึ้นในระยะสั้น แต่สิ่งที่จะช่วยประคองราคาข้าวไม่ให้ตกต่ำไปมากกว่านี้ คือรัฐบาลต้องบริหารอัตราแลกเปลี่ยน หรือค่าเงินบาทให้อ่อนค่าลง และจะต้องเร่งพัฒนาสายพันธุ์ข้าวที่มีคุณภาพ และให้ตรงกับความต้องการของตลาด จึงจะสามารถแข่งขันได้</p>
+    <p>สำหรับสถานการณ์ส่งออกข้าว ปัญหาที่เกิดขึ้นใหม่ขณะนี้ คือ ประเทศฟิลิปปินส์ จะระงับการนำเข้าข้าว โดยนางอารดา เฟื่องทอง อธิบดีกรมการค้าต่างประเทศ ระบุว่า กรณีที่ฟิลิปปินส์ ระงับนำเข้าข้าว จะกระทบกับเวียดนามเป็นหลัก แต่ไทยก็ได้รับผลกระทบเช่นกัน โดยกรมฯมีแผนช่วยเหลือผู้ประกอบการไทย โดยเร่งหาช่องทางส่งออกไปยังตลาดใหม่ ๆ มากขึ้น</p>
+    <p>รวมถึงการเจรจา จีทูจี ระหว่างไทย-จีน ที่ยังเหลืออีกกว่า 200,000 ตัน จะพยายามปิดดีลให้ได้ภายในปีนี้ รวมถึงติดต่อเจรจากับตลาดอื่น ๆ เช่นแอฟริกาใต้ บังกลาเทศ อิรัก และซาอุดีอาระเบีย เพิ่มเติม เพื่อยังคงรักษาเป้าส่งออกข้าวไทยในปีนี้ ที่ 7.5 ล้านตัน</p>
   </div>
 </div>
 
