--- a/เศรษฐกิจ2.html
+++ b/เศรษฐกิจ2.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>ข่าวต่างประเทศ - ประชาสัมพันธ์ข่าวประจำชั่วโมง</title>
+  <title>ข่าวเศรษฐกิจ - ประชาสัมพันธ์ข่าวประจำชั่วโมง</title>
   <style>
     body {
       font-family: Tahoma, "Segoe UI", Arial, sans-serif; /* ฟอนต์เรียบง่ายแบบเว็บข่าว */
@@ -76,17 +76,16 @@
   <a href="1.html">หน้าแรก</a>
   <a href="การเมือง.html">ข่าวการเมือง</a>
   <a href="ต่างประเทศ.html">ข่าวประเทศ</a>
-  <a href="เศรษฐกิจ.html">เศรษฐกิจ</a>
+  <a href="เศรษฐกิจ.html">ข่าวเศรษฐกิจ</a>
 </nav>
 
 <div class="headline">
-  <img src="https://www.infoquest.co.th/dxt-content/uploads/2025/08/A8726257E4194EF22FB72EEDF4DB68D0.jpg" alt="พาดหัวข่าวการเมือง">
+  <img src="https://static.thairath.co.th/media/dFQROr7oWzulq5Fa6rfYlUNNTAwdOWlcOnzYU7HUQ7qf6Vl0NVkfPL7QdHVSH9Tmbof.jpg" alt="พาดหัวข่าวการเมือง">
   <div class="headline-content">
-    <h1>ราคาทองคำยังผันผวน GCAP GOLD แนะจับตาประชุมผู้นำสหรัฐ-ยูเครนอาจเป็นจุดเปลี่ยน</h1>
-    <p>นางสาวอารีรัตน์ มุราชัย หัวหน้านักวิเคราะห์ บริษัท จีแคป จำกัด หรือ GCAP GOLD เปิดเผยว่า ทิศทางราคาทองคำในสัปดาห์นี้ ยังคงเต็มไปด้วยความไม่แน่นอน จากหลายปัจจัยสำคัญ ไม่ว่าจะเป็นการเจรจาระหว่างระหว่าง โดนัลด์ ทรัมป์ ประธานาธิบดีสหรัฐฯ และวลาดิเมียร์ ปูติน ผู้นำรัสเซีย ที่จบลงโดยไร้ข้อตกลงใด ๆ เพื่อยุติหรือชะลอสงครามในยูเครน รวมถึงถ้อยแถลงของผู้นำสหรัฐฯ และรัสเซีย ที่ยังคงคลุมเครือ ซึ่งปัจจัยเหล่านี้ส่งผลให้มองว่าทองคำเป็นสินทรัพย์ปลอดภัย ซึ่งมีแนวโน้มได้รับแรงสนับสนุนจากความผันผวนทางภูมิรัฐศาสตร์และเศรษฐกิจโลก
-อีกทั้งยังคงต้องจับตาการประชุมระหว่างประธานาธิบดีโดนัลด์ ทรัมป์ และประธานาธิบดีโวโลดีมีร์ เซเลนสกี ที่ได้รับความสนใจจากทั่วโลก เนื่องจากการเจรจาในครั้งนี้อาจเป็นจุดเปลี่ยนสำคัญของสงครามยูเครน–รัสเซีย อย่างไรก็ตามหากการเจรจาไม่สามารถสร้างความคืบหน้า หรือมีแรงกดดันให้ยูเครนยอมสละดินแดน อาจเพิ่มความเสี่ยงทางภูมิรัฐศาสตร์ทันที และส่งผลให้แรงซื้อทองคำในฐานะสินทรัพย์ปลอดภัยกลับมาแข็งแกร่ง แต่ทั้งนี้หากการเจรจาสามารถสร้างความหวังสู่สันติภาพได้ ก็อาจช่วยคลายความกังวลของนักลงทุน และกดดันราคาทองคำให้ชะลอตัวในระยะสั้น
-ขณะเดียวกันท่าทีของยุโรป และองค์การนาโต ก็เป็นอีกหนึ่งปัจจัยที่ตลาดจับตามอง หากยุโรปยังยืนยันไม่ยอมให้มีการเปลี่ยนแปลงพรมแดนด้วยกำลัง และให้การสนับสนุนยูเครนอย่างเต็มที่ ความขัดแย้งอาจยืดเยื้อ และหนุนแรงซื้อทองคำเพื่อป้องกันความเสี่ยง ทั้งนี้หากเกิดความเห็นต่างภายในยุโรป โดยบางประเทศแสดงท่าทีอ่อนข้อให้กับรัสเซีย ก็อาจถูกตีความว่าแรงกดดันเริ่มผ่อนคลาย และราคาทองคำอาจเผชิญแรงขายทำกำไรได้ในระยะสั้น
-จากประเด็นดังกล่าว ฝ่ายวิจัย GCAP GOLD แนะนำกลยุทธ์การลงทุนแบบรอจังหวะเข้าซื้อเมื่อราคาทองคำอ่อนตัวที่ระดับ $3,308 และ $3,285 โดยคาดว่าราคาทองคำในประเทศจะเคลื่อนไหวบริเวณ 51,000 และ 50,800 บาท ทั้งนี้ หากในช่วงต้นสัปดาห์ราคายังไม่สามารถดีดกลับไปยืนเหนือ $3,375 ได้ มีแนวโน้มพักตัวระยะสั้นลงสู่โซนดังกล่าว ซึ่งถือเป็นโอกาสสะสมสำหรับนักลงทุนที่ยังไม่มีสถานะ หรือผู้ที่วางแผนทยอยซื้อเฉลี่ยต้นทุน</p>
+    <h1>กรุงไทยฟ้อง “เอเคเอส” คดีล้มละลาย</h1>
+    <p>ผู้สื่อข่าวรายงานว่า บมจ.เอเคเอส คอร์ปอเรชั่น (AKS) แจ้งตลาดหลักทรัพย์แห่งประเทศไทย (ตลท.) เมื่อวันที่ 3 ก.ค.68 บริษัทได้หมายเรียกคดีล้มละลาย หมายเลขคดีดำที่ ล.4440/2568 ระหว่างธนาคารกรุงไทย กับจำเลยที่ 1 กับพวกรวม 17 คน ซึ่งบริษัทเป็นจำเลยที่ 13 ตามคำฟ้องคดีล้มละลายระบุว่าจำเลยทั้ง 17 เป็นหนี้ตามคำพิพากษาศาลฎีกาแผนกคดีอาญาของผู้ดำรงตำแหน่งทางการเมือง คดีหมายเลขดำที่ อม.3/2555 คดีหมายเลขแดงที่ อม.55/2558 แก่โจทก์ </p>
+    <p>ดังนี้ เมื่อวันที่ 13 มิ.ย.55 อัยการสูงสุดได้เป็นโจทก์ฟ้องจำเลยทั้ง 17 กับพวกรวม 27 คนต่อศาลฎีกาแผนกคดีอาญาของผู้ดำรงตำแหน่งทางการเมือง โดยฟ้องจำเลยทั้ง 17 ในฐานความผิดเป็นเจ้าพนักงานมีหน้าที่จัดการหรือดูแลกิจการใดเข้ามามีส่วนได้เสียเพื่อประโยชน์สำหรับตนเองหรือผู้อื่น ร่วมกันปฏิบัติหรือละเว้นการปฏิบัติหน้าที่โดยทุจริตหรือโดยมิชอบ เป็นกรรมการผู้จัดการหรือบุคคลใดซึ่งรับผิดชอบการดำเนินการของธนาคารกรุงไทยร่วมกันกระทำผิดหน้าที่ของตนโดยทุจริตจนเป็นเหตุให้เกิดความเสียหายในลักษณะที่เป็นทรัพย์สินของกรุงไทย</p>
+    <p>และประชาชน และเป็นพนักงานในองค์กร ร่วมกันใช้อำนาจหน้าที่โดยทุจริตอันเป็นการเสียหายแก่กรุงไทย ละเว้นการปฏิบัติหน้าที่โดยมิชอบ เพื่อให้เกิดความเสียหาย ร่วมกันสนับสนุนเจ้าพนักงานของรัฐกระทำผิดดังกล่าวยักยอกทรัพย์ และเป็นผู้มีอาชีพหรือธุรกิจอันย่อมเป็นที่ไว้วางใจของประชาชนรับมอบหมายให้จัดการทรัพย์สิน กระทำผิดหน้าที่โดยทุจริต เป็นเหตุให้เกิดความเสียหายแก่ประโยชน์ในลักษณะที่เป็นทรัพย์สินของผู้นั้นและให้จำเลยทั้ง 17 กับพวกร่วมกันคืนหรือใช้เงินคืน 10,054.46 ล้านบาท โดยศาลนัดพิจารณาคดีที่ศาลล้มละลายกลาง วันที่ 2 ก.ย.68 เวลา 09.00 น.</p>
   </div>
 </div>
 
