--- a/เศรษฐกิจ3.html
+++ b/เศรษฐกิจ3.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>ข่าวต่างประเทศ - ประชาสัมพันธ์ข่าวประจำชั่วโมง</title>
+  <title>ข่าวเศรษฐกิจ - ประชาสัมพันธ์ข่าวประจำชั่วโมง</title>
   <style>
     body {
       font-family: Tahoma, "Segoe UI", Arial, sans-serif; /* ฟอนต์เรียบง่ายแบบเว็บข่าว */
@@ -76,28 +76,19 @@
   <a href="1.html">หน้าแรก</a>
   <a href="การเมือง.html">ข่าวการเมือง</a>
   <a href="ต่างประเทศ.html">ข่าวประเทศ</a>
-  <a href="เศรษฐกิจ.html">เศรษฐกิจ</a>
+  <a href="เศรษฐกิจ.html">ข่าวเศรษฐกิจ</a>
 </nav>
 
 <div class="headline">
-  <img src="https://www.infoquest.co.th/dxt-content/uploads/2025/08/3A047295AA3B3662B63590DC1B19FD15.jpg" alt="พาดหัวข่าวการเมือง">
+  <img src="https://i-invdn-com.investing.com/news/moved_LYNXMPEL470VG_L.jpg" alt="พาดหัวข่าวการเมือง">
   <div class="headline-content">
-    <h1>ยอดใช้น้ำมันเชื้อเพลิง H1/68 โต 0.6% น้ำมัน Jet โตตามท่องเที่ยว-ขนส่งทางอากาศ</h1>
-    <p>ยอดใช้โซฮอล์ 95 เพิ่ม หลังส่วนต่าง 91-95 แคบลง
-การใช้น้ำมันกลุ่มเบนซิน เฉลี่ยอยู่ที่ 31.91 ล้านลิตร/วัน เพิ่มขึ้น 0.8% โดยน้ำมันแก๊สโซฮอล์ 95 เพิ่มขึ้นมาอยู่ที่ 19.32 ล้านลิตร/วัน เนื่องจากแก๊สโซฮอล์ 95 มีส่วนต่างราคาสูงกว่าแก๊สโซฮอล์ 91 อยู่ที่ 0.37 บาท/ลิตร (ราคาเฉลี่ยเดือน ม.ค.-มิ.ย.68) โดยในช่วงเดียวกันของปีก่อนแก๊สโซฮอล์ 95 มีส่วนต่างราคาสูงกว่าแก๊สโซฮอล์ 91 อยู่ที่ 1.22 บาท/ลิตร ทำให้ผู้บริโภคเลือกใช้แก๊สโซฮอล์ 95 สูงขึ้นจากปีก่อน
-ขณะที่การใช้แก๊สโซฮอล์ 91 ลดลงมาอยู่ที่ 6.65 ล้านลิตร/วัน แก๊สโซฮอล์อี 20 ลดลงมาอยู่ที่ 5.14 ล้านลิตร/วัน เบนซิน ลดลงมาอยู่ที่ 0.40 ล้านลิตร/วัน และแก๊สโซฮอล์อี 85 ลดลงมาอยู่ที่ 0.06 ล้านลิตร/วัน พบว่าการใช้น้ำมันกลุ่มเบนซินเริ่มเห็นสัญญาณของการชะลอตัวลงโดยมีสาเหตุมาจากหลายปัจจัย อาทิ การขยายตัวของยานยนต์ไฟฟ้า (BEV HEV และ PHEV) มีสัดส่วนร้อยละ 6.5 ของรถยนต์นั่งส่วนบุคคล ไม่เกิน 7 คน1 รวมถึงการใช้งานระบบรถไฟฟ้าขนส่งมวลชนที่มีการขยายตัวของผู้โดยสารอย่างต่อเนื่องคิดเป็นร้อยละ 3.2 2 เทียบกับปีก่อน
-ภาคขนส่งชะลอตัว ทำยอดใช้ดีเซลลดลง
-การใช้น้ำมันดีเซลหมุนเร็ว ณ สถานีบริการ เฉลี่ยอยู่ที่ 67.67 ล้านลิตร/วัน ลดลง 1.4% ประกอบด้วย ดีเซลหมุนเร็วธรรมดา ลดลงมาอยู่ที่ 67.65 ล้านลิตร/วัน สอดคล้องกับดัชนีการส่งสินค้า (Shipment Index) เฉลี่ยเดือน ม.ค.-พ.ค.หดตัวลง 0.9% จากช่วงเดียวกันของปีก่อน รวมถึงสถานการณ์เศรษฐกิจโดยรวมยังคงฟื้นตัวช้า โดยการบริโภคของภาคเอกชนชะลอตัว และการลงทุนของภาคเอกชนหดตัวลงอย่างต่อเนื่อง
-ประกอบกับการลดลงของนักท่องเที่ยวจีน แม้การส่งออกยังคงขยายตัวจากการเร่งส่งออกสินค้าไปยังสหรัฐฯ เนื่องจากแรงกดดันจากมาตรการภาษีศุลกากรตอบโต้ แต่ยังไม่ส่งผลชัดเจนต่อภาคการผลิตมากนัก โดยในไตรมาสที่ 1/2568 ภาคการผลิตขยายตัวเพียง 0.6% YOY4 สำหรับดีเซลหมุนเร็วบี 20 ลดลงมาอยู่ที่ 0.02 ล้านลิตร/วัน ขณะที่ดีเซลพื้นฐานเพิ่มขึ้นมาอยู่ที่ 2.16 ล้านลิตร/วัน ทั้งนี้ ภาพรวมปริมาณการใช้น้ำมันกลุ่มดีเซล อยู่ที่ 69.83 ล้านลิตร/วัน
-ยอดใช้น้ำมัน Jet โตต่อเนื่อง
-การใช้น้ำมันอากาศยานเชิงพาณิชย์ (Jet A1) เฉลี่ยอยู่ที่ 17.50 ล้านลิตร/วัน เพิ่มขึ้น 11.2% ยังคงขยายตัวอย่างต่อเนื่องจากปีก่อน โดยจำนวนผู้เยี่ยมเยือนทั้งคนไทย และต่างชาติขยายตัว 1.65% รวมไปถึงการขยายตัวของบริการขนส่งสินค้าทางอากาศ ขณะที่นักท่องเที่ยวต่างชาติที่เดินทางเข้าประเทศไทยสะสม 6 เดือนแรกของปี 2568 มีจำนวน 16.68 ล้านคน ลดลง 4.7% ซึ่งเป็นการลดลงของนักท่องเที่ยวชาวเอเชียตะวันออกเฉียงเหนือ (โดยเฉพาะจีน) ที่ลดลง 24.76% เมื่อเทียบกับปีก่อน จากปัจจัยด้านความเชื่อมั่นและเศรษฐกิจภายในประเทศจากนโยบายการค้าโลก
-LPG ลดลง 3.0%
-การใช้ LPG เฉลี่ยอยู่ที่ 17.81 ล้านกก./วัน ลดลง 3.0% ผลจากภาคปิโตรเคมีเป็นสำคัญ ลดลงมาอยู่ที่ 7.59 ล้านกก./วัน และภาคขนส่งลดลงมาอยู่ที่ 2.28 ล้านกก./วัน ขณะที่การใช้ในภาคครัวเรือน เพิ่มขึ้นมาอยู่ที่ 5.87 ล้านกก./วัน และภาคอุตสาหกรรม เพิ่มขึ้นมาอยู่ที่ 2.07 ล้านกก./วัน
-NGV ลดลง 16.0%
-การใช้ NGV เฉลี่ยอยู่ที่ 2.43 ล้านกก./วัน ลดลง 16.0% โดยมีแนวโน้มลดลงอย่างต่อเนื่องสอดคล้องกับจำนวนรถจดทะเบียน NGV สะสมที่ลดลง และจำนวนสถานีบริการ NGV ที่มีแนวโน้มปิดตัวลง อย่างไรก็ตาม ปตท. ยังคงช่วยเหลือผ่านโครงการบัตรสิทธิประโยชน์ ให้กับกลุ่มรถแท็กซี่และรถโดยสารสาธารณะ และได้ประกาศปรับลดราคา NGV สำหรับรถทั่วไปลง 0.45 บาท/กก. ส่งผลให้ราคาอยู่ที่ 18.10 บาท/กก. โดยมีผลระหว่างวันที่ 16 มิ.ย.-15 ก.ค.68
-ส่งออกน้ำมันลดลง 11% นำเข้าลดเล็กน้อย
-การนำเข้าน้ำมันเชื้อเพลิง เฉลี่ยอยู่ที่ 1,038,290 บาร์เรล/วัน ลดลง 0.7% คิดเป็นมูลค่าการนำเข้ารวม 79,575 ล้านบาท/เดือน โดยเป็นการนำเข้าน้ำมันดิบอยู่ที่ 1,003,556 บาร์เรล/วัน เพิ่มขึ้น 2.2% คิดเป็นมูลค่าการนำเข้าน้ำมันดิบ อยู่ที่ 77,572 ล้านบาท/เดือน สำหรับการนำเข้าน้ำมันสำเร็จรูป (น้ำมันเบนซินพื้นฐาน น้ำมันดีเซลพื้นฐาน น้ำมันอากาศยาน และ LPG) อยู่ที่ 34,734 บาร์เรล/วัน ลดลง 45% คิดเป็นมูลค่าการนำเข้าน้ำมันสำเร็จรูปอยู่ที่ 2,004 ล้านบาท/เดือน
-ขณะที่การส่งออกน้ำมันสำเร็จรูป เฉลี่ยอยู่ที่ 144,703 บาร์เรล/วัน ลดลง 11.1% เป็นการส่งออกน้ำมันเบนซิน น้ำมันดีเซล น้ำมันเตา น้ำมันอากาศยาน และ LPG คิดเป็นมูลค่าส่งออกรวม 12,071 ล้านบาท/เดือน</p>
+    <h1>คำกล่าวของพาวเวลล์ที่แจ็คสัน โฮลกระตุ้นความคาดหวังการลดอัตราดอกเบี้ย</h1>
+    <p>อัตราผลตอบแทนพันธบัตรรัฐบาลสหรัฐฯ ลดลงอย่างมากในวันศุกร์ หลังจากประธานธนาคารกลางสหรัฐฯ (เฟด) เจอโรม พาวเวลล์ ส่งสัญญาณว่าอาจมีการลดอัตราดอกเบี้ยเพื่อสนับสนุนตลาดแรงงาน</p>
+    <p>ในสุนทรพจน์ที่การประชุมประจําปีของเฟดที่แจ็คสัน โฮล รัฐไวโอมิง พาวเวลล์กล่าวว่า "ความเสถียรของอัตราการว่างงานและมาตรการตลาดแรงงานอื่นๆ ทําให้เราสามารถดําเนินการอย่างรอบคอบในขณะที่เรากําลังพิจารณาการเปลี่ยนแปลงนโยบายของเรา"</p>
+    <p>คํากล่าวดังกล่าวกระตุ้นให้เกิดการเติบโตในตลาดพันธบัตรรัฐบาล โดยอัตราผลตอบแทนพันธบัตรอายุ 2 ปีลดลงมากถึง 10 เบสิสพอยต์ พันธบัตรระยะสั้นเหล่านี้มักจะตอบสนองต่อการเปลี่ยนแปลงความคาดหวังนโยบายการเงินมากกว่า ในขณะเดียวกัน อัตราผลตอบแทนพันธบัตรอ้างอิงอายุ 10 ปีลดลงมาที่ 4.25% ซึ่งเป็นระดับต่ําสุดในรอบหนึ่งสัปดาห์</p>
+    <p>เทรดเดอร์ตอบสนองด้วยการเพิ่มการเดิมพันในการลดอัตราดอกเบี้ยในเดือนกันยายน โดยตลาดกําลังคาดการณ์ถึงความเป็นไปได้ประมาณ 85% ที่จะมีการลดอัตราดอกเบี้ยลง 0.25% ในเดือนหน้า เพิ่มขึ้นจากประมาณ 65% ก่อนการกล่าวสุนทรพจน์ของพาวเวลล์</p>
+    <p>สัญญาสวอปอัตราดอกเบี้ยที่เชื่อมโยงกับวันประชุมของเฟดในขณะนี้บ่งชี้ถึงความคาดหวังว่าจะมีการลดอัตราดอกเบี้ยสองครั้งก่อนสิ้นปี ธนาคารกลางได้รักษาอัตราดอกเบี้ยนโยบายไว้ในช่วง 4.25% ถึง 4.5% ตั้งแต่เดือนธันวาคม</p>
+    <p></p>
   </div>
 </div>
 
