--- a/1.html
+++ b/1.html
@@ -186,7 +186,8 @@
     </div>
     <div class="mySlides">
       <a href="ต่างประเทศ2.html"><img src="https://static.thairath.co.th/media/dFQROr7oWzulq5Fa6rfYlTzgS9XXeTtaPMbfaGyTy7MYuq1Xztxinb7vELuW3PgHGcB.webp"></a>
-      <div class="text">ฮือฮา ภาพปรากฏการณ์ "ภูตแดง" หายาก กลางท้องฟ้ายามค่ำคืนของทิเบต</div>
+      <div class="text">เป็นเรื่องของ “แพทองธาร” - สภาฯ ไม่ต้องเตรียมการรองรับ ศาลรัฐธรรมนูญลงมติคดีคลิปเสียง
+อ่านเพิ่มเติม</div>
     </div>
 
     <!-- ปุ่มลูกศร -->
@@ -223,7 +224,8 @@
     <div class="news-box">
       <img src="https://static.thairath.co.th/media/dFQROr7oWzulq5Fa6rfYlTzgS9XXeTtaPMbfaGyTy7MYuq1Xztxinb7vELuW3PgHGcB.webp">
       <div class="news-content">
-        <h3>ฮือฮา ภาพปรากฏการณ์ "ภูตแดง" หายาก กลางท้องฟ้ายามค่ำคืนของทิเบต</h3>
+        <h3>เป็นเรื่องของ “แพทองธาร” - สภาฯ ไม่ต้องเตรียมการรองรับ ศาลรัฐธรรมนูญลงมติคดีคลิปเสียง
+อ่านเพิ่มเติม</h3>
         <a href="ต่างประเทศ2.html">อ่านเพิ่มเติม</a>
       </div>
     </div>
