--- a/1.html
+++ b/1.html
@@ -185,9 +185,8 @@
       <div class="text">สุดระทึก เครื่องบินขับไล่มาเลย์ระเบิดขณะนำเครื่องขึ้น นักบินดีดตัวรอดหวุดหวิด</div>
     </div>
     <div class="mySlides">
-      <a href="ต่างประเทศ2.html"><img src="https://static.thairath.co.th/media/dFQROr7oWzulq5Fa6rfYlTzgS9XXeTtaPMbfaGyTy7MYuq1Xztxinb7vELuW3PgHGcB.webp"></a>
-      <div class="text">เป็นเรื่องของ “แพทองธาร” - สภาฯ ไม่ต้องเตรียมการรองรับ ศาลรัฐธรรมนูญลงมติคดีคลิปเสียง
-อ่านเพิ่มเติม</div>
+      <a href="ต่างประเทศ2.html"><img src="https://static.thairath.co.th/media/dFQROr7oWzulq5Fa6rfYlUeocqWrIXdBYx3gF9TNOA2UhhN5vaRL8HDPFfJBA1hXlqt.webp"></a>
+      <div class="text">ฮือฮา ภาพปรากฏการณ์ "ภูตแดง" หายาก กลางท้องฟ้ายามค่ำคืนของทิเบต</div>
     </div>
 
     <!-- ปุ่มลูกศร -->
@@ -222,10 +221,9 @@
     </div>
     <!-- ข่าวที่ 3 -->
     <div class="news-box">
-      <img src="https://static.thairath.co.th/media/dFQROr7oWzulq5Fa6rfYlTzgS9XXeTtaPMbfaGyTy7MYuq1Xztxinb7vELuW3PgHGcB.webp">
+      <img src="https://static.thairath.co.th/media/dFQROr7oWzulq5Fa6rfYlUeocqWrIXdBYx3gF9TNOA2UhhN5vaRL8HDPFfJBA1hXlqt.webp">
       <div class="news-content">
-        <h3>เป็นเรื่องของ “แพทองธาร” - สภาฯ ไม่ต้องเตรียมการรองรับ ศาลรัฐธรรมนูญลงมติคดีคลิปเสียง
-อ่านเพิ่มเติม</h3>
+        <h3>ฮือฮา ภาพปรากฏการณ์ "ภูตแดง" หายาก กลางท้องฟ้ายามค่ำคืนของทิเบต</h3>
         <a href="ต่างประเทศ2.html">อ่านเพิ่มเติม</a>
       </div>
     </div>
